Bug 378845 - Autosave popup aggressively steals focus
Summary: Autosave popup aggressively steals focus
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (show other bugs)
Version: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-16 19:10 UTC by Storm Engineer
Modified: 2017-06-05 08:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Storm Engineer 2017-04-16 19:10:22 UTC
Until recently autosave had no visual indication other than a busy cursor - since recently there is now a small window popping up. This window aggressively steals focus - it pulled me out of a full-screen game by minimizing it.

Expected behavior: The autosave window should not interfere with anything outside of Krita

To reproduce, have a file open and autosave enabled, then bring another program to focus and wait for autosave to kick in.
Comment 1 Halla Rempt 2017-06-05 08:24:47 UTC
Git commit ccabda13e854f2be764b18abd93a47382d1566e3 by Boudewijn Rempt.
Committed on 05/06/2017 at 08:23.
Pushed by rempt into branch 'master'.

Set batchmode to true when autosaving and show wait cursor

This prevents the saving popup from popping up during autosave.

M  +6    -1    libs/ui/KisDocument.cpp

https://commits.kde.org/krita/ccabda13e854f2be764b18abd93a47382d1566e3