Set batchmode to true when autosaving and show wait cursor

This prevents the saving popup from popping up during autosave.

BUG:378845